fix: css adjusts on mobile

--- a/frontend/src/assets/styles/global.scss
+++ b/frontend/src/assets/styles/global.scss
@@ -19,6 +19,10 @@
   }
 }
 
+.btn-big {
+  height: 56px;
+}
+
 .container {
   width: 1200px;
   margin: 0 auto;
@@ -33,5 +37,11 @@
 @media (max-width: 1200px) {
   .container {
     width: calc(100% - 40px);
+  }
+}
+
+@media (max-width: 1010px) {
+  .grow-on-mobile {
+    width: 100%;
   }
 }
